Add conclusion to notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -457,6 +457,22 @@
    "source": [
     "Here we see something interesting. Even though the data was generated using a fifth degree polynomial, a third degree polynomial was enough to capture the data. "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This hyperparameter search will reduce the number of decisions taken by the analyser and will make your code more robust to non-linearities in data. This procedure also ensures to find the best balancce between underfiiting and overfitting. This is not only a handy tool but should also be included as a \"good practice\" in any analysis pipeline/workflow."
+   ]
   }
  ],
  "metadata": {
